--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 asgiref==3.2.3
+Django==3.0.3
 image==1.5.27
 Pillow==7.0.0
 pytz==2019.3
 selenium==3.141.0
 sqlparse==0.3.0
-tk==0.1.0
+python-tk==2.7.17-1~18.04
 urllib3==1.25.7
